# photo-reviver

./: .gitignore  README.md  app.py  pyproject.toml  requirements-boptl.txt  requirements.txt
configs/: pipeline.boptl.deoldify.json  pipeline.boptl.json  pipeline.example.json
scripts/: setup_boptl_assets.py
src/photo_reviver/: __init__.py  analysis.py  app_utils.py  cli.py  colorization.py  config.py  decision.py  desktop_app.py  evaluate.py  io_utils.py  pipeline.py  postprocess.py  preprocess.py  restoration.py  types.py  web_app.py
tests/: test_analysis.py  test_app_utils.py  test_colorization.py  test_config.py  test_decision.py  test_evaluate.py  test_postprocess.py  test_preprocess.py  test_restoration.py
